画像を生成し、カーソルを合わせると作品が読める

--- a/client/components/loading/Loading.module.css
+++ b/client/components/loading/Loading.module.css
@@ -18,6 +18,12 @@
   }
 }
 
+.contentFrame {
+  position: relative;
+  height: 100%;
+  background: #333a;
+}
+
 .loader {
   position: absolute;
   top: 50%;
