--- a/client/layouts/basicHeader/BasicHeader.module.css
+++ b/client/layouts/basicHeader/BasicHeader.module.css
@@ -1,6 +1,7 @@
 .container {
   position: sticky;
   top: 0;
+  z-index: 1;
   height: 60px;
   background: #fff;
   border-bottom: 1px solid var(--border-color-default);
